force-app/main/default/objects/Placement_Monthly_Forecast__c/Placement_Monthly_Forecast__c.object-meta.xml
<CustomObject>
    <label>Placement Monthly Forecast</label>
    <nameField>
        <label>Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Monthly Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>