force-app/main/default/objects/Placement_Monthly_Forecast__c/fields/Ever_Active__c.field-meta.xml
<CustomField>
    <fullName>Ever_Active__c</fullName>
    <formula>Month_Start__c + Month_Adds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ever Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>