force-app/main/default/objects/Placement_Monthly_Forecast__c/fields/Month_Adds__c.field-meta.xml
<CustomField>
    <fullName>Month_Adds__c</fullName>
    <formula>IF(
AND(Placement__r.First_Working_Day__c &gt;=Start_Date__c, Placement__r.First_Working_Day__c &lt;=End_Date__c)
,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Adds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>