force-app/main/default/objects/Placement_Monthly_Forecast__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placement Monthly Forecasts</relationshipLabel>
    <relationshipName>Placement_Monthly_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>